platform/k8s/base/core/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: argos-core
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: argos
spec:
  selector:
    app.kubernetes.io/name: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
